# Comfyui-Resolution-Master

./: README.md  __init__.py  aztoolkit.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_request.yml  feature-request.yml
.github/workflows/: ComfyUIdownloads.yml  publish.yml  release.yml
core/: auto_detect.py  calculation_api.py  dimension_cache.py
core/log_system/: __init__.py  config.py  log_funcs.py  logger.py
js/: AspectRatioSelector.js  DialogManager.js  ErrorHandler.js  ResolutionMaster.js  SearchableDropdown.js  aspect_ratio_selector.js  config.js  css-loader.js  css_loader.js  dialog_manager.js  error_handler.js  logger.js  resolution_master.js  searchable_dropdown.js
js/auto_detect/: auto_detect_methods.js
js/calculations/: model_profiles.js  resolution_master_calculation_methods.js
js/canvas/: aspect_ratio_math.js  resolution_master_canvas_methods.js
js/components/: aspect_ratio_selector.js  searchable_dropdown.js
js/config/: resolution_master_tooltips.js
js/css/: aspect-ratio-columns.css  common-components.css  css-variables.css  drag-drop.css  json-editor-dialog.css  preset-add-view.css  preset-list-renderer.css  preset-manager-dialog.css  preset-ui-components.css  rename-dialog.css  resolution_master.css  searchable-dropdown.css
js/dialogs/: custom_value_dialog_manager.js
js/drawing/: resolution_master_draw_methods.js
js/interaction/: resolution_master_interaction_methods.js
js/lib/: prism.css  (+2 more)
tests/: test_auto_detect.py  test_aztoolkit.py  test_calculation_api.py  test_dimension_cache.py
(+54 files in other folders)
