[project]
name = "Comfyui-Resolution-Master"
description = "ResolutionMaster is for total control over resolution and aspect ratio. It provides an intuitive interface with an interactive canvas, advanced scaling options, extensive presets (SDXL, Flux, WAN), and model-specific optimizations for high-quality AI image generation."
version = "1.4.6"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Azornes/Comfyui-Resolution-Master"

[tool.comfy]
PublisherId = "azornes"
DisplayName = "Comfyui-Resolution-Master"
Icon = ""
